Fix sign up and login display on mobile devices

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
         <nav>
             <h1>CAID</h1>
-            <div>
+            <div class="enter-options">
                 <button class="sign-up">Sign Up</button>
                 <button class="login">Login</button>
             </div>
